--- a/playbooks/roles/httpd/handlers/main.yml
+++ b/playbooks/roles/httpd/handlers/main.yml
@@ -4,4 +4,11 @@
     name: httpd
     state: restarted
     enabled: yes
+  when: (ansible_facts['distribution'] == "CentOS")
+- name: reloaded apache2
+  service:
+    name: apache2
+    state: restarted
+    enabled: yes
+  when: (ansible_facts['distribution'] == "Ubuntu")
 
